--- a/rootdir/root/init.sprout_common.rc
+++ b/rootdir/root/init.sprout_common.rc
@@ -452,12 +452,12 @@ on post-fs-data
     chown gps gps /sys/devices/virtual/gpsdrv/gps/status
 
 # WiFi
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/vendor/wifi 0770 wifi wifi
+    mkdir /data/vendor/wifi/sockets 0770 wifi wifi
     mkdir /data/vendor/wifi/wpa 0770 wifi wifi
     mkdir /data/vendor/wifi/wpa/sockets 0770 wifi wifi
-    mkdir /data/misc/wpa_supplicant 0770 wifi wifi
-    chown wifi wifi /data/misc/wifi
+    mkdir /data/vendor/wifi/wpa_supplicant 0770 wifi wifi
+    chown wifi wifi /data/vendor/wifi
     chown wifi wifi /dev/wmtWifi
 #
 # Connectivity related device nodes & configuration (end)
